person-service/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: person-service
  namespace: person-prod
spec:
  selector:
    app: person-service
  ports:
    - port: 80
      targetPort: 80
