person-service/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: person-ingress-prod
  namespace: person-prod
spec:
  rules:
    - host:
      http:
        paths:
          - path: /person
            backend:
              serviceName: person-service
              servicePort: 80
